--- a/artifacts/application.properties
+++ b/artifacts/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:postgresql://localhost:8080/lecture_7_task_1_db_1
+spring.datasource.url=jdbc:postgresql://localhost:5432/root
 spring.datasource.username=root
 spring.datasource.password=root
